# colofur-gliders

./: .gitignore  CITATION.cff  Notes.md  README.md  pyproject.toml  test_impl.py
src/colorful_gliders/: PointCloud.py  PolynomialRANSAC.py
