[tool.poetry]
name = "colorful-gliders"
version = "0.1.0"
description = "Collection of Scripts to Process 3D Point Clouds and Assess their Accuracy"
authors = ["Florian-Katerndahl <florian@katerndahl.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "colorful_gliders", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-pdal = "^0.0.1"
laspy = "^2.5.4"
open3d = "^0.19.0"
laszip = "^0.2.3"
numpy = "^2.2.6"
scikit-learn = "^1.6.1"
jupyterlab = {version = "^4.4.3", optional = true, extras = ["interactive"]}
matplotlib = {version = "^3.10.3", optional = true, extras = ["interactive"]}

[tool.poetry.extras]
interactive = ["jupyterlab", "matplotlib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
